--- a/src/content/posts/cored20rpg/exploration-knacks.mdx
+++ b/src/content/posts/cored20rpg/exploration-knacks.mdx
@@ -90,6 +90,39 @@ tags:
 
 ## Монах
 
+
+**АДЕПТ СКОРОСТИ.** Ваша скорость увеличивается на 5 футов, пока вы не носите доспехи или не используете щит. Вы можете выбрать эту технику более одного раза. Его эффекты суммируются.
+
+**ФОКУС РЕЧИ.** Требования: 15-й уровень. Сочетание знания языка тела и духовной осведомленности позволяет вам понимать все разговорные языки. Более того, любое существо, понимающее этот язык, может понять, что вы говорите.
+
+**ШТОРМОВАЯ ПОХОДКА.** Требования: Адепт скорости, владение навыком Атлетика. Вы совершаете проверки Атлетики для прыжков с преимуществом. В свой ход вы можете потратить 1 единицу Ки, чтобы утроить дистанцию прыжка до начала вашего следующего хода.
+
+**ПРОГУЛКА С УРАГАНОМ.** Требования: Штормовая походка. Ваш шаг настолько легок, что кажется, будто вы парите в воздухе. Вы можете использовать бонусное действие и потратить 1 силу, чтобы наложить на себя заклинание полета. Вы также получаете преимущество при проверке скрытности, связанной с шумом. Эффект длится до начала вашего следующего хода.
+
+**МГНОВЕННЫЙ ШАГ.** Требования: Адепт скорости, 11-й уровень. Вы можете двигаться так быстро, что кажется, будто вы телепортируетесь. Вы можете использовать действие, потратить 4 единицы Ки и выбрать незанятое место, которое вы можете видеть в радиусе 500 футов. Вы телепортируетесь и прибываете в нужное место. Вы можете взять с собой снаряжение, носимые предметы размером меньше вашей руки, а также одно существо вашего размера или меньше. Кроме того, вы становитесь невидимым до начала вашего следующего хода.
+
+**МАРАФОНЕЦ.** Вы привыкли бегать на длинные дистанции. Когда вы двигаетесь в быстром темпе, вы не получаете штраф к пассивному Восприятию. Кроме того, вы добавляете свою кость боевых искусств, когда делаете спасбросок Телосложения при марш броске.
+
+**Проворный атлет.** Вы всегда можете использовать модификатор ловкости при проверке атлетики.
+
+**МОЩНАЯ ТРОСТЬ.** Вы всегда можете использовать модификатор силы при проверке акробатики.
+
+**РЕЛИГИОЗНАЯ ПОДГОТОВКА.** Вы владеете навыком "Религия". Когда вы оказываетесь рядом со священной реликвией, религиозным артефактом или любым другим подобным предметом или сооружением, вы можете потратить 2 единицы Ки, чтобы узнать о нем что-нибудь. На вопрос о предмете, на который можно ответить "да" или "нет", вы получаете правильный ответ от Мастера.
+
+**ПРОГУЛКА В ТЕНИ.** Требования: 11-й уровень, владение Скрытностью. Вы можете входить в тень и выходить из нее. Когда вы находитесь в тусклом освещенной местности или темноте, бонусным действием вы можете телепортироваться на расстояние до 60 футов в незанятое пространство, которое вы можете видеть и которое также находится в тускло освещенной местности или темноте. До начала вашего следующего хода вы совершаете проверки Скрытности с преимуществом.
+
+**ШЕСТОЕ ЧУВСТВО.** Требования: 11-й уровень. Вы совершаете проверки инициативы с преимуществом. Кроме того, вы всегда можете использовать свою Мудрость вместо Интеллекта при проверках Магии, Истории, Анализа, Природы и Религии.
+
+**МЕДЛЕННОЕ ПАДЕНИЕ.** Вы можете использовать свою реакцию при падении, чтобы уменьшить урон от падения на величину, в пять раз превышающую ваш уровень монаха.
+
+**ПРОГУЛКА ПО СТЕНАМ.** Требования: Скорость адепта, владение навыком Акробатика. Вы получаете способность перемещаться по вертикальным поверхностям на своем ходу, не падая во время движения. Вы можете использовать бонусное действие и потратить 1 единицу Ки, чтобы наложить на себя заклинание "Лапы паука". Эффект длится до начала вашего следующего хода.
+
+**ОСОЗНАНИЕ ВОИНА.** Требования: Владение навыком выживания. Ваша отточенная осведомленность о поле боя не имеет себе равных даже в дикой природе. Когда вы делаете проверку Выживания для ориентирования, вы игнорируете штрафы за быстрый темп передвижения и получаете бонус к проверке, равный вашей кости боевых искусств.
+
+**ВОДНАЯ ПРОГУЛКА.** Требования: Адепт скорости. Вы получаете способность перемещаться по жидкости в свой ход, не падая во время движения. Вы можете использовать бонусное действие и потратить 1 единицу Ки, чтобы сотворить на себя заклинание "Водная прогулка". Эффект длится до начала вашего следующего хода.
+
+**ОБУЧЕНИЕ В ДИКОЙ ПРИРОДЕ.** Вы владеете навыком "Выживание". Для целей классовых особенностей адептов вы считаете Животных мастерами боевых искусств.
+
 ## Паладин
 
 ## Плут
