--- a/src/content/posts/cored20rpg/exploration-knacks.mdx
+++ b/src/content/posts/cored20rpg/exploration-knacks.mdx
@@ -8,6 +8,31 @@ tags:
   - плейтест
 ---
 
+Количество исследовательских приемов в зависимости от уровня персонажа
+
+| УРОВЕНЬ | БОЕЦ | МОНАХ | ВАРВАР | РЕЙНДЖЕР | ПЛУТ | ВОЛШЕБНИК | КЛЕРИК |
+|---------|------|-------|--------|----------|------|-----------|--------|
+| 1       | 1    | 1     | 1      | 1        | 1    | 1         |        |
+| 2       | 1    | 1     | 1      | 2        | 1    | 1         |        |
+| 3       | 1    | 2     | 1      | 3        | 2    | 1         |        |
+| 4       | 2    | 2     | 2      | 4        | 2    | 2         |        |
+| 5       | 2    | 3     | 2      | 5        | 3    | 2         |        |
+| 6       | 2    | 3     | 2      | 5        | 3    | 2         |        |
+| 7       | 2    | 4     | 3      | 6        | 4    | 2         |        |
+| 8       | 3    | 4     | 3      | 6        | 4    | 3         |        |
+| 9       | 3    | 5     | 3      | 7        | 5    | 3         |        |
+| 10      | 3    | 5     | 4      | 7        | 5    | 3         |        |
+| 11      | 3    | 6     | 4      | 8        | 6    | 3         |        |
+| 12      | 3    | 6     | 4      | 8        | 6    | 3         |        |
+| 13      | 4    | 7     | 5      | 9        | 7    | 4         |        |
+| 14      | 4    | 7     | 5      | 9        | 7    | 4         |        |
+| 15      | 4    | 8     | 5      | 10       | 8    | 4         |        |
+| 16      | 4    | 8     | 6      | 10       | 8    | 4         |        |
+| 17      | 5    | 9     | 6      | 11       | 9    | 5         |        |
+| 18      | 5    | 9     | 6      | 11       | 9    | 5         |        |
+| 19      | 5    | 10    | 6      | 12       | 10   | 5         |        |
+| 20      | 5    | 10    | 6      | 12       | 10   | 5         |
+
 ## Бард
 
 ## Боец
