--- a/src/content/posts/cored20rpg/exploration-knacks.mdx
+++ b/src/content/posts/cored20rpg/exploration-knacks.mdx
@@ -35,6 +35,29 @@ tags:
 
 ## Бард
 
+**ЗАКОЛДОВАННЫЙ КОМПАНЬОН.** Выберите один навык, которым вы владеете. Вы получаете бонус 1к4 при проверках этого навыка. Кроме того, вы получаете бонус 1к4 при проверке влияния на любого, кто сопровождает вас в путешествии.
+
+**ЖЕСТОКОЕ ПРОТИВОСТОЯНИЕ.** Выберите один навык, которым вы владеете. Вы получаете бонус 1к4 при проверке навыка. Кроме того, вы получаете преимущество при проверке характеристик, позволяющих подготовить засаду.
+
+**ИМПРОВИЗИРОВАННАЯ ИНЖЕНЕРИЯ.** Вы получаете владение инженерным делом. Если вы уже владеете навыком "Инженерное дело", вместо этого вы получаете бонус 1к4 к проверкам этого навыка. Кроме того, вы получаете преимущество при проверке Инженерного дела, чтобы построить временное сооружение (например, мост или лестницу) и укрепить существующую конструкцию (например, стену разрушающегося здания).
+
+**МАРШЕВАЯ ПЕСНЯ.** Вы знаете, как вдохновить и мотивировать своих спутников во время путешествия. Союзники в радиусе 30 футов от вас передвигаются на 1 милю в час быстрее, чем обычно. Ваша партия не может использовать Скрытность, когда путешествует таким образом.
+
+**ПРИБЫЛЬНЫЙ.** Вы получаете владение навыком "Выступление". Если вы уже владеете навыком "Выступление", вы получаете дополнительный кубик опыта. Каждый раз, когда вы делаете проверку эффективности Выступления для заработка денег вы получаете в два раза больше, чем обычно.
+
+**РЕЗОНАНС.** Выберите один навык, которым вы владеете. Вы получаете бонус 1к4 при проверке выбранного навыка. Кроме того, когда вы или ваш спутник произносите ритуальное заклинание, его длительность удваивается, и оно действует на вдвое большее число целей, чем обычно.
+
+**УВЕРЕННОСТЬ В СЕБЕ.** Выберите один навык, которым вы владеете. Вы получаете дополнительный бонус 1к4 при проверке выбранного навыка. Кроме того, если вы добились успеха в состязании Интеллекта, Мудрости или Харизмы, вы получаете преимущество в следующем состязании Интеллекта, Мудрости или Харизмы против того же существа.
+
+**ПЕСНЬ ОТДЫХА.** Любые существа, способные воспринимать ваше искусство во время короткого отдыха и броска Кости Хитов, получают дополнительно 1к8 хитов.
+
+**SHOWOFF.** Выберите один навык, которым вы владеете. Вы получаете дополнительный бонус 1к4 при проверке выбранного навыка. Кроме того, когда вы успешно совершаете проверку акробатики или атлетики, чтобы подняться, балансировать, перепрыгнуть через опасность или иным образом физически преодолеть препятствие, несколько союзников, равных вашему бонусу владения, получают преимущество на ту же проверку, сделанную для преодоления того же препятствия.
+
+**ГОРОДСКОЙ ЖИТЕЛЬ.** Выберите один навык, которым вы владеете. Вы получаете бонус 1к4 при проверке выбранного навыка. Пока вы пользуетесь положительной репутацией в городе или поселке, все базовые товары и компоненты для сотворения заклинаний стоят на 1/3 меньше (округление вниз).
+
+**ШИРОКАЯ ИЗВЕСТНОСТЬ.** Вы не имеете помех при проверках Известности, сделанных за пределами области, описанной вашим показателем Известности.
+
+
 ## Боец
 
 **Альпинист.** При проверках навыков и характеристик связанных с взбиранием вы получаете бонус 1к4 к результату броска. При провале вы можете потратить 1 кость хитов чтобы перебросить к20 и должны использовать новый результат.
