--- a/src/content/posts/cored20rpg/exploration-knacks.mdx
+++ b/src/content/posts/cored20rpg/exploration-knacks.mdx
@@ -132,7 +132,60 @@ tags:
 
 ## Друид
 
+**ВОЗДУШНЫЙ ГЕОДЕЗИСТ.** Вы чувствуете себя как дома, взлетая на головокружительную высоту и вглядываясь в горизонт. Вы можете ознакомиться с местностью в радиусе 5 миль вокруг вас, потратив минуту на изучение окрестностей во время полета или на большой высоте. Ознакомившись с местностью таким образом, вы получаете бонус 1к4 при любой проверке восприятия или выживания на открытом воздухе в течение следующих 24 часов, и не можете знакомиться с другой местностью, пока не закончите длинный отдых.
+
+**АКВАТИЧЕСКИЙ ЖИТЕЛЬ.** Вы чувствуете себя как дома на глубине, умеете контролировать свое дыхание и настраиваться на тонкие движения воды. Вы приобретаете скорость плавания, равную вашей Скорости, и прибавляете свой модификатор Мудрости к количеству минут, на которые вы можете задержать дыхание, прежде чем задохнетесь. Кроме того, полностью погрузившись в воду, вы получаете слепозрение в радиусе 10 футов. 
+
+**ПЕЩЕРНЫЙ БРОДЯГА.** Вы привыкли к гулкому одиночеству огромных пещер. Вы всегда знаете направление любого звука, который слышите, независимо от эха. Кроме того, пока вы находитесь в полной темноте и не оглушены, вы получаете слепозрение в радиусе 10 футов.
+
+**ОБИТАТЕЛЬ ПУСТЫНИ.** Немногие предпочитают жить там, где над головой неустанно палит солнце, но вы находите спокойствие среди песков. Вы естественным образом акклиматизированы к жаркой погоде и экстремально высоким температурам. Кроме того, находясь в пустыне или подобной засушливой местности, вы можете потратить 1 час на поиски пищи и рытье водоемов, чтобы получить 1к2 дневных рационов и воды. После использования этой способности вы не сможете сделать это снова, пока не завершите длинный отдых. 
+
+**МИСТИЧЕСКИЙ ВЫЖИВШИЙ.** Вы хорошо знаете земли, извращенные феями, искаженные магическим загрязнением, и другие места, искаженные неестественным образом. Вы можете делать проверки выживаниЯ вместо проверок Магии в отношении магической среды, продуктов питания и существ, а также получать дополнительный бонус 1к4 при любой проверке, сделанной таким образом.
+
+**ТРАВЯНАЯ АПТЕКА.** Леса и джунгли полны природных лекарств, которые можно собирать. Вы получаете бонус 1к4 при проверках, проводимых с использованием набора травника, и при проверках, проводимых для поиска травяных ингредиентов. Кроме того, каждый раз, когда вы получаете лекарственную или редкую траву с помощью набора травника, вы получаете в два раза больше лекарств или редких трав.
+
+**БОЛОТНЫЙ ПРОВОДНИК.** Болота и топи неприятны для большинства, но для вас они полны природной красоты. Передвижение по болотам, трясинам или грязной труднопроходимой местности не требует от вас дополнительных движений, и вы совершаете с преимуществом проверки Выживания для ориентирования во время путешествий по болотам. Кроме того, вы игнорируете негативные эффекты, наложенные отдыхом в сырой или болотистой среде. 
+
+**МАСТЕР ПРОВИЗИИ.** Неважно, где находится кисть, вы всегда знаете, как собрать природные богатства. Вы имеете преимущество при проверках на поиск или сбор съедобных растений в дикой природе и получаете в два раза больше запасов, чем обычно.
+
+**АЛЬПИНИСТ.** Вы получаете скорость восхождения, равную вашей Скорости. Вы получаете бонус 1к4 при любых проверках Атлетики, сделанных во время восхождения, а также акклиматизируетесь к большим высотам, включая высоты выше 20 000 футов. Кроме того, вы игнорируете негативные эффекты, накладываемые отдыхом на скалистой или горной местности.
+
+**ИССЛЕДОВАТЕЛЬ ТУНДРЫ.** Вам по душе холод заснеженной тундры. Вы естественным образом акклиматизированы к холоду и экстремально низким температурам, игнорируете помеху к проверкам восприятия, накладываемую метелями, и получаете бонус 1к4 на спасброна концентрацию, накладываемых метелями. Кроме того, вы игнорируете эффекты грубости, накладываемые отдыхом без тепла в условиях сильного холода.
+
+
+
 ## Клерик
+
+**НАСТАВЛЕНИЕ ПРЕДКОВ.** Требование: 5-й уровень, возможность сотворять заклинания клерика 3-го круга. В дополнение к заклинаниям, которые вы обычно готовите, у вас всегда подготовлено заклинание "Говорить с мертвыми", и вы можете использовать эту способность, чтобы сотворить его один раз между длинными отдыхами, не тратя ячейку заклинания. При этом вам не обязательно выбирать труп; вы также можете выбрать могильный знак, мемориал, статую, картину или другое изображение умершего существа, с которым хотите поговорить. Если выбранное существо не умерло или если такого существа вообще не существовало, заклинание не срабатывает.
+
+**СОСТРАДАТЕЛЬНАЯ МЕДСЕСТРА.** Ваша проницательность и сочувствие с лихвой компенсируют отсутствие у вас формального медицинского образования. Вы получаете бонус 1к4 при проверках медицины. Кроме того, при проверках медицины вы всегда можете использовать Мудрость.
+
+**ВЕРНЫЙ ИСТОРИК.** У вас глубокие отношения с религиозной историей и искусством. Вы получаете бонус 1к4 при проверке истории. Кроме того, вы всегда можете использовать Мудрость при проверке Истории.
+
+**БЛАГОРОДНЫЙ ЦЕЛИТЕЛЬ.** Во время короткого отдыха вы можете потратить использование из своего набора лекаря, чтобы помочь своим союзникам в их восстановлении. Выбранное вами существо может дважды бросить потраченную Кость Хитов, взяв больший результат. Вы не можете тратить свои собственные Кости Хитов при использовании этой способности, так как вы используете всю свою энергию для излечения своих товарищей.
+
+**ЗЛОСЧАСТНОЕ ПАДЕНИЕ.** Падение с высоты более 30 футов заставляет вашу высшую сущность вмешаться. Вы защищены, как при заклинании "Падение пера". Эта особенность не использует вашу реакцию. После использования этой особенности вы не сможете её использовать повторно до завершения длинного отдыха.
+
+**МОНАШЕСКИЙ АСКЕТИЗМ.** Ваша высшая сущность действует как буфер, защищая вас от трудностей, или ваша религиозная самодисциплина поддерживает вас даже в суровые времена. Вы игнорируете первый уровень усталости, который вы могли бы получать за день.
+
+**НУМИНОЗНОЕ ОСОЗНАНИЕ.** Когда вы видите существо, которое кажется вам животным, вы автоматически определяете, кто это - небожитель, исчадие или фея. У вас есть преимущество при проверках Магии и Медицины, когда вы взаимодействуете с магическими ранами и болезнями, вызванными небожителями, исчадиями и феями.
+
+**ПРЕДЧУВСТВИЕ.** У вас есть способность интерпретировать сообщения, посланные вам во сне или видениях вашей высшей сущностью. После каждого длинного отдыха вы знаете либо:
+- часть информации, которая поможет вам в ваших начинаниях до конца следующего длинного отдыха,
+- либо: как будет развиваться то или иное действие до конца вашего следующего длинного отдыха. Бросьте к20. До конца следующего длинного отдыха вы можете заменить любой бросок, сделанный существом, которое вы можете видеть в радиусе 30 футов от вас, результатом этого броска к20. Мастер сообщает вам, какое преимущество будет доступно, когда вы закончите длинный отдых.
+- 
+**СОХРАНЕНИЕ.** Ваша связь с более великой сущностью позволяет вам чувствовать яд или болезнь в еде, напитках или других предметах потребления. Чтобы почувствовать эту порчу, вы должны иметь прямой контакт с ними или их контейнером.
+
+**ПРАВЕДНЫЙ ПУТЬ.** Божественная интуиция ведет вас по запутанным тропинкам построек или населенных пунктов без путаницы. Раз в день вы можете выбрать путь Праведника на 1 час. Идя по Пути Праведника, вы знаете, когда враги находятся в радиусе 60 футов от вас, и понимаете, можно ли обойти их, отступая назад или выбирая альтернативные маршруты. Вы также можете использовать действие, чтобы почувствовать наличие ловушек в радиусе 30 футов, но не их расположение и характер.
+
+**УСПОКАИВАЮЩИЕ СЛОВА.** Ваши вдохновленные божеством советы и мудрые рекомендации могут успокоить беспокойные умы. Вы можете уменьшить страдания одного союзника на один уровень. Один раз использовав эту способность, вы не сможете сделать это снова, пока не завершите длинный отдых.
+
+**СВЕРХЪЕСТЕСТВЕННАЯ ИНТУИЦИЯ.** Выберите тип существа: исчадие, фея, небожитель, элементаль или нежить. Вы знаете, когда существо этого типа находится в пределах 60 футов от вас, но не знаете его местоположения. От этого признака защищает необнаружение. Вы можете выбрать этот знак несколько раз, каждый раз выбирая другой тип существ.
+
+**ТЕОЛОГ.** Годы преданного изучения дали вам глубокое понимание эволюции религии, теологии и связанных с ними фигур. Вы получаете бонус 1к4 при проверке Религии. Кроме того, при проверке Религии вы всегда можете использовать Мудрость.
+
+**ГОЛОС СМЕРТИ.** Ваши личные знания о божественном гневе и последних временах делают ваши прокламации совершенно леденящими душу. Вы получаете опыт на одну кость при проверке Запугивания. Кроме того, вы всегда можете выбрать использование Мудрости при проверке Запугивания.
+
 
 ## Колдун
 
