--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -5,9 +5,9 @@ description: Созданная в сообществе Киборги и Чар
 
 ## РАБОЧИЕ ФАЙЛЫ
 
-Последняя версия для печати: [Версия для публикации](https://1drv.ms/w/s!Atcrhwwo1lBA4rJxGaAmNH6Aatr55Q?e=Na4g1N)
+Последняя версия для печати: [Версия для публикации](https://1drv.ms/w/s!Atcrhwwo1lBA4-MYO3eLXJyl4dRe2Q?e=bzKp9H)
 
-v.0022-06102023
+v.025-18112023 (обновление от 08.12.2023)
 
 ## ДОПОЛНИТЕЛЬНОЕ
 
@@ -45,6 +45,10 @@ v.0022-06102023
 
 [Алхимические товары и инструменты](https://cyborgsandmages.com/posts/cored20rpg/alchemical-items-and-substances)
 
+**Одежда**
+
+**Травяные смеси**
+
 7.  ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ
 
 8.  ПРИКЛЮЧЕНИЯ
@@ -80,6 +84,8 @@ v.0022-06102023
 Метамагия
 
 Воззвания
+
+[Исследовательские приемы](https://cyborgsandmages.com/posts/cored20rpg/exploration-knacks#%D0%B2%D0%B0%D1%80%D0%B2%D0%B0%D1%80)
 
 ## БЕСТИАРИЙ
 
