--- a/src/content/posts/articles/lazy-dm-resource-document-translation.mdx
+++ b/src/content/posts/articles/lazy-dm-resource-document-translation.mdx
@@ -13,3 +13,11 @@ tags:
 
 Предварительную версию можно скачать ниже:
 
+[docx](https://cyborgsandmages.com/files/downloads/LAZY_DM_RESOURCE_DOCUMENT_090.docx)
+
+[pdf](https://cyborgsandmages.com/files/downloads/LAZY_DM_RESOURCE_DOCUMENT_090.pdf)
+
+Над проеактом работали: Redrick, Palant
+
+При перепосте ссылки на материал и самого материала - оставляйте ссылкау на наш ресурс.
+
