--- a/src/content/posts/articles/lazy-dm-resource-document-translation.mdx
+++ b/src/content/posts/articles/lazy-dm-resource-document-translation.mdx
@@ -19,5 +19,5 @@ tags:
 
 Над проеактом работали: Redrick, Palant
 
-При перепосте ссылки на материал и самого материала - оставляйте ссылкау на наш ресурс.
+При перепосте ссылки на материал и самого материала - оставляйте ссылку на наш ресурс.
 
