--- a/src/content/posts/cored20rpg/alchemical-items-and-substances.mdx
+++ b/src/content/posts/cored20rpg/alchemical-items-and-substances.mdx
@@ -6,7 +6,7 @@ tags:
   - Алхимия
   - D&D 5e
   - Core d20 RPG
-  - WIP
+  - Снаряжение
 ---
 
 Для обывателя алхимия - прекрасное искусство, позволяющее получать широкий спектр полезных предметов: от почти магических улучшений металлов до прекрасных чистящих средств и полезных эликсиров и мазей.
