--- a/src/content/posts/cored20rpg/equipment-herbal-brews.mdx
+++ b/src/content/posts/cored20rpg/equipment-herbal-brews.mdx
@@ -7,6 +7,7 @@ tags:
   - Травяные смеси
   - Гербализм
   - Травничество
+  - Core d20 RPG
 ---
 
 | Предмет                            | Стоимость, зм | Вес, фунтов |
