--- a/src/content/posts/cored20rpg/armor.mdx
+++ b/src/content/posts/cored20rpg/armor.mdx
@@ -502,6 +502,10 @@ This metal does not require magic techniques to craft, nor will the material alo
 
 ---
 
+Свойства доспехов
+
+---
+
 [СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
 
 [ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
