--- a/src/content/posts/cored20rpg/equipment - tables.mdx
+++ b/src/content/posts/cored20rpg/equipment - tables.mdx
@@ -5,6 +5,14 @@ date: 2024-02-20
 tags:
   - Снаряжение
   - Core d20 RPG
+  - Справочные материалы
+---
+
+На этой странице приведены справочные данные таблиц из раздела Снаряжение
+
+
+[ТАБЛИЦЫ СНАРЯЖЕНИЯ В DOCX](https://1drv.ms/w/s!Atcrhwwo1lBA5JkMQ9YeCV7_E2Tkng?e=mtAYbD)
+
 ---
 
 ТАБЛИЦА 1. СТАНДАРТНЫЕ КУРСЫ ОБМЕНА
@@ -1112,3 +1120,16 @@ tags:
     
  * Для всех средних и тяжелых доспехов требуется нижний слой в виде гамбезона. Если у вас уже есть гамбезон, вы можете вычесть 10 м из стоимости при покупке комплекта средней или тяжелой доспеха.		
 † Тяжелый доспех может быть улучшен до следующего уровня за разницу в стоимости. Например, кузнец может улучшить полулаты до латного доспеха за 750 зм.		
+
+---
+
+[ТАБЛИЦЫ СНАРЯЖЕНИЯ В DOCX](https://1drv.ms/w/s!Atcrhwwo1lBA5JkMQ9YeCV7_E2Tkng?e=mtAYbD)
+
+
+---
+
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
