--- a/src/content/posts/cored20rpg/weapons.mdx
+++ b/src/content/posts/cored20rpg/weapons.mdx
@@ -329,6 +329,10 @@ author: Антон "Palant" Палихов
 
 ---
 
+Свойства оружия
+
+---
+
 [СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
 
 [ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
