--- a/src/content/posts/cored20rpg/combat.mdx
+++ b/src/content/posts/cored20rpg/combat.mdx
@@ -1,10 +1,11 @@
 ---
-title: Core d20 RPG - Сражение
-description: Core d20 RPG - Сражение
-date: 2024-02-20
+title: Сражение
+description: Сражение
+date: 2023-01-01
 tags:
-  - Сражение
   - Core d20 RPG
+  - Сражение
+author: Антон "Palant" Палихов
 ---
 
 ## <a name="_toc115410134"></a><a name="_toc127016508"></a><a name="_toc158186344"></a>Порядок сражения
