--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -49,11 +49,13 @@ v.025-18112023 (обновление от 08.12.2023)
 
 **Травяные смеси**
 
+[**Справочные таблицы по снаряжению**](https://cyborgsandmages.com/posts/cored20rpg/equipment---tables)
+
 7.  ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ
 
 8.  ПРИКЛЮЧЕНИЯ
 
-9.  СРАЖЕНИЕ
+9.  [СРАЖЕНИЕ](https://cyborgsandmages.com/posts/cored20rpg/combat)
 
 [Отдых и лечение](https://cyborgsandmages.com/posts/cored20rpg/rests-and-healing)
 
@@ -67,7 +69,11 @@ v.025-18112023 (обновление от 08.12.2023)
 
 [Состояния](https://cyborgsandmages.com/posts/cored20rpg/conditions)
 
+Состояния - справочно
+
 [Действия](https://cyborgsandmages.com/posts/cored20rpg/actions)
+
+Действия - справочно
 
 [Базовые приемы](https://cyborgsandmages.com/posts/cored20rpg/basicmaneuvers)
 
@@ -78,8 +84,6 @@ v.025-18112023 (обновление от 08.12.2023)
 Боевые приемы
 
 Оружейные приемы
-
-Боевые техники
 
 Метамагия
 
