--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -51,7 +51,7 @@ v.025-18112023 (обновление от 08.12.2023)
 
 [**Справочные таблицы по снаряжению**](https://cyborgsandmages.com/posts/cored20rpg/equipment---tables)
 
-7.  ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ
+7.  [ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ](https://cyborgsandmages.com/posts/cored20rpg/abilities-checks-skills)
 
 8.  ПРИКЛЮЧЕНИЯ
 
