--- a/src/content/singles/lazydm-resource-document-ru.mdx
+++ b/src/content/singles/lazydm-resource-document-ru.mdx
@@ -10,8 +10,6 @@ translator: Redrick, Palant
 
 Список ресурсов Ленивого мастера
 
-<a name="_toc159247798"></a>**Список ресурсов Ленивого мастера**
-
 Майкл Ши, [SlyFlourish.com](https://slyflourish.com/).
 
 Обновлено 10 сентября 2023
@@ -22,7 +20,7 @@ translator: Redrick, Palant
 
 This work includes material taken from the [Lazy GM's Resource Document](https://slyflourish.com/lazy_gm_resource_document.html) by Michael E. Shea of [SlyFlourish.com](https://slyflourish.com/), available under a [Creative Commons Attribution 4.0 International License](http://creativecommons.org/licenses/by/4.0/).
 
-This work includes material taken from the System Reference Document 5.1 ("SRD 5.1") by Wizards of the Coast LLC and available at <https://dnd.wizards.com/resources/systems-reference-document>. The SRD 5.1 is licensed under the Creative Commons Attribution 4.0 International License available at <https://creativecommons.org/licenses/by/4.0/legalcode>.
+This work includes material taken from the System Reference Document 5.1 ("SRD 5.1") by Wizards of the Coast LLC and available at https://dnd.wizards.com/resources/systems-reference-document. The SRD 5.1 is licensed under the Creative Commons Attribution 4.0 International License available at https://creativecommons.org/licenses/by/4.0/legalcode>
 
 Публикация этого документа стала возможна благодаря [патронам Sly Flourish](https://www.patreon.com/slyflourish). Благодарим вас за поддержку!
 
@@ -38,9 +36,9 @@ This work includes material taken from the System Reference Document 5.1 ("SRD 5
 
 *ВЕРСИЯ 0.9 ОТ 19.02.2024*
 
-ДОПОЛНИТЕЛЬНЫЕ МАТЕРИАЛЫ ВЫ МОЖЕТЕ НАЙТИ У НАС НА САЙТЕ <https://cyborgsandmages.com/> 
+ДОПОЛНИТЕЛЬНЫЕ МАТЕРИАЛЫ ВЫ МОЖЕТЕ НАЙТИ У НАС НА САЙТЕ https://cyborgsandmages.com/
 
-ДЛЯ ОБСУЖДЕНИЯ – ПРИСОЕДИНЯЙТЕСЬ К ДИСКОРД СЕРВЕРУ СООБЩЕСТВА <https://discord.gg/yrJqvCqU3w> ИЛИ ТЕЛЕГРАМ КАНАЛУ <https://t.me/cyborgs_and_mages> 
+ДЛЯ ОБСУЖДЕНИЯ – ПРИСОЕДИНЯЙТЕСЬ К ДИСКОРД СЕРВЕРУ СООБЩЕСТВА https://discord.gg/yrJqvCqU3w ИЛИ ТЕЛЕГРАМ КАНАЛУ https://t.me/cyborgs_and_mages
 
 **Содержание**
 
