--- a/src/content/singles/lazydm-resource-document-ru.mdx
+++ b/src/content/singles/lazydm-resource-document-ru.mdx
@@ -75,72 +75,6 @@ This work includes material taken from the System Reference Document 5.1 ("SRD 5
 - Случайные городские события
 - Случайные монстры в подземелье
 - Ленивая соло-игра в 5Е
-# СОДЕРЖАНИЕ
-[Список ресурсов Ленивого мастера	1](#_toc159247798)
-
-[Восемь шагов подготовки ленивого мастера	5](#_toc159247799)
-
-[Процесс подготовки ленивого мастера	7](#_toc159247800)
-
-[Примеры сильных стартов	9](#_toc159247801)
-
-[Создание тайн и улик	11](#_toc159247802)
-
-[Создание ролевой группы	13](#_toc159247803)
-
-[Список задач на нулевой сессии	14](#_toc159247804)
-
-[Инструменты безопасности	16](#_toc159247805)
-
-[Создание связей между персонажами	18](#_toc159247806)
-
-[Спиральное развитие кампании	20](#_toc159247807)
-
-[Шаблоны квестов	23](#_toc159247808)
-
-[Инструменты для импровизации в 5Е	25](#_toc159247809)
-
-[Быстрые трюки для ленивых игр по 5Е	27](#_toc159247810)
-
-[Путешествие и исследование дикой местности	28](#_toc159247811)
-
-[Быстрое создание боевого столкновения для 5Е	30](#_toc159247812)
-
-[Ленивое создание боевого столкновения для 5Е	31](#_toc159247813)
-
-[Руководство по театру разума (Расширенное)	33](#_toc159247814)
-
-[Руководство по театру разума (Сокращенное)	35](#_toc159247815)
-
-[Бой на основе зон	37](#_toc159247816)
-
-[Показатели сложности монстров	39](#_toc159247817)
-
-[Шаблоны монстров	40](#_toc159247818)
-
-[Орды в игре	45](#_toc159247819)
-
-[Эффекты стресса	47](#_toc159247820)
-
-[Ключевые генераторы приключений	49](#_toc159247821)
-
-[Генератор НИП	58](#_toc159247822)
-
-[Генератор сокровищ	62](#_toc159247823)
-
-[Случайные ловушки	64](#_toc159247824)
-
-[Случайные монументы	67](#_toc159247825)
-
-[Случайные предметы	72](#_toc159247826)
-
-[Случайные городские события	78](#_toc159247827)
-
-[Случайные монстры в подземелье	82](#_toc159247828)
-
-[Ленивая соло-игра в 5Е	90](#_toc159247829)
-
-
 
 ## ***<a name="_toc159247799"></a>Восемь шагов подготовки ленивого мастера***
 Список задач при ленивой подготовке к типичной игровой сессии выглядит так:
@@ -3195,7 +3129,9 @@ This work includes material taken from the System Reference Document 5.1 ("SRD 5
 19\. Истончается граница с миром фей
 
 20\. Мир теней просачивается в материальное измерение
+
 ## <a name="_toc159247828"></a>***Случайные монстры в подземелье***
+
 Следующие таблицы помогут вам случайным образом выбрать монстров, основываясь на «уровне подземелья». Хотя эти таблицы созданы для олдскульного данженкроула, вы можете использовать их для генерации случайных столкновений с монстрами практически в любой обстановке – в руинах, в старой церкви, пещерах, катакомбах, старой башней волшебника или каком-то другом забытом логове.
 
 Для использования этих таблиц сначала определите, на каком уровне подземелья находятся персонажи. Он может соответствовать уровню персонажей, но это необязательно. Если персонажи второго уровня решили спуститься на пятый уровень подземелья – да будет так.
@@ -3206,24 +3142,25 @@ This work includes material taken from the System Reference Document 5.1 ("SRD 5
 
 Прежде чем окончательно определиться с числом монстров, стоит проверить, будет ли ваше столкновение потенциально смертельным, воспользовавшись разделом **Быстрое создание столкновения для 5E**.
 
+
 **Таблица монстров**
 
-<table><tr><th colspan="1" rowspan="2"><b>Уровень подземелья</b></th><th colspan="10"><b>Таблица монстров</b></th></tr>
-<tr><td colspan="1"><b>1</b></td><td colspan="1"><b>2</b></td><td colspan="1"><b>3</b></td><td colspan="1"><b>4</b></td><td colspan="1"><b>5</b></td><td colspan="1"><b>6</b></td><td colspan="1"><b>7</b></td><td colspan="1"><b>8</b></td><td colspan="1"><b>9</b></td><td colspan="1"><b>10</b></td></tr>
-<tr><td colspan="1" valign="top"><b>1</b></td><td colspan="1" valign="top">1-16</td><td colspan="1" valign="top">17-19</td><td colspan="1" valign="top">20</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top"></td></tr>
-<tr><td colspan="1" valign="top"><b>2</b></td><td colspan="1" valign="top">1-12</td><td colspan="1" valign="top">13-16</td><td colspan="1" valign="top">17-18</td><td colspan="1" valign="top">19</td><td colspan="1" valign="top">20</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top"></td></tr>
-<tr><td colspan="1" valign="top"><b>3</b></td><td colspan="1" valign="top">1-12</td><td colspan="1" valign="top">13-16</td><td colspan="1" valign="top">17-18</td><td colspan="1" valign="top">19</td><td colspan="1" valign="top">20</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top"></td></tr>
-<tr><td colspan="1" valign="top"><b>4</b></td><td colspan="1" valign="top">1-5</td><td colspan="1" valign="top">6-10</td><td colspan="1" valign="top">11-16</td><td colspan="1" valign="top">17-18</td><td colspan="1" valign="top">19</td><td colspan="1" valign="top">20</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top"></td></tr>
-<tr><td colspan="1" valign="top"><b>5</b></td><td colspan="1" valign="top">1-3</td><td colspan="1" valign="top">4-6</td><td colspan="1" valign="top">7-12</td><td colspan="1" valign="top">13-16</td><td colspan="1" valign="top">17-18</td><td colspan="1" valign="top">19</td><td colspan="1" valign="top">20</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top"></td></tr>
-<tr><td colspan="1" valign="top"><b>6</b></td><td colspan="1" valign="top">1-2</td><td colspan="1" valign="top">3-4</td><td colspan="1" valign="top">5-6</td><td colspan="1" valign="top">7-12</td><td colspan="1" valign="top">13-16</td><td colspan="1" valign="top">17-18</td><td colspan="1" valign="top">19</td><td colspan="1" valign="top">20</td><td colspan="1" valign="top">—</td><td colspan="1" valign="top"></td></tr>
-<tr><td colspan="1" valign="top"><b>7</b></td><td colspan="1" valign="top">1</td><td colspan="1" valign="top">2-3</td><td colspan="1" valign="top">4-5</td><td colspan="1" valign="top">6-10</td><td colspan="1" valign="top">11-14</td><td colspan="1" valign="top">15-16</td><td colspan="1" valign="top">17-18</td><td colspan="1" valign="top">19</td><td colspan="1" valign="top">20</td><td colspan="1" valign="top">—</td></tr>
-<tr><td colspan="1" valign="top"><b>8</b></td><td colspan="1" valign="top">1</td><td colspan="1" valign="top">2</td><td colspan="1" valign="top">3-4</td><td colspan="1" valign="top">5-7</td><td colspan="1" valign="top">8-10</td><td colspan="1" valign="top">11-14</td><td colspan="1" valign="top">15-16</td><td colspan="1" valign="top">17-18</td><td colspan="1" valign="top">19</td><td colspan="1" valign="top">20</td></tr>
-<tr><td colspan="1" valign="top"><b>9</b></td><td colspan="1" valign="top">1</td><td colspan="1" valign="top">2</td><td colspan="1" valign="top">3</td><td colspan="1" valign="top">4-5</td><td colspan="1" valign="top">6-8</td><td colspan="1" valign="top">9-12</td><td colspan="1" valign="top">13-15</td><td colspan="1" valign="top">16-17</td><td colspan="1" valign="top">18-19</td><td colspan="1" valign="top">20</td></tr>
-<tr><td colspan="1" valign="top"><b>10—11</b></td><td colspan="1" valign="top">1</td><td colspan="1" valign="top">2</td><td colspan="1" valign="top">3</td><td colspan="1" valign="top">4</td><td colspan="1" valign="top">5-6</td><td colspan="1" valign="top">7-9</td><td colspan="1" valign="top">10-12</td><td colspan="1" valign="top">13-16</td><td colspan="1" valign="top">17-19</td><td colspan="1" valign="top">20</td></tr>
-<tr><td colspan="1" valign="top"><b>12—13</b></td><td colspan="1" valign="top">1</td><td colspan="1" valign="top">2</td><td colspan="1" valign="top">3</td><td colspan="1" valign="top">4</td><td colspan="1" valign="top">5</td><td colspan="1" valign="top">6-7</td><td colspan="1" valign="top">8-9</td><td colspan="1" valign="top">10-12</td><td colspan="1" valign="top">13-18</td><td colspan="1" valign="top">19-20</td></tr>
-<tr><td colspan="1" valign="top"><b>14—15</b></td><td colspan="1" valign="top">1</td><td colspan="1" valign="top">2</td><td colspan="1" valign="top">3</td><td colspan="1" valign="top">4</td><td colspan="1" valign="top">5</td><td colspan="1" valign="top">6</td><td colspan="1" valign="top">7-8</td><td colspan="1" valign="top">9-11</td><td colspan="1" valign="top">12-17</td><td colspan="1" valign="top">18-20</td></tr>
-<tr><td colspan="1" valign="top"><b>16+</b></td><td colspan="1" valign="top">1</td><td colspan="1" valign="top">2</td><td colspan="1" valign="top">3</td><td colspan="1" valign="top">4</td><td colspan="1" valign="top">5</td><td colspan="1" valign="top">6</td><td colspan="1" valign="top">7</td><td colspan="1" valign="top">8-10</td><td colspan="1" valign="top">11-16</td><td colspan="1" valign="top">17-20</td></tr>
-</table>
+| Уровень подземелья | Таблица монстров |       |       |       |       |       |       |       |       |       |
+|--------------------|------------------|-------|-------|-------|-------|-------|-------|-------|-------|-------|
+|                    | 1                | 2     | 3     | 4     | 5     | 6     | 7     | 8     | 9     | 10    |
+| 1                  | 1-16             | 17-19 | 20    | —     | —     | —     | —     | —     | —     |       |
+| 2                  | 1-12             | 13-16 | 17-18 | 19    | 20    | —     | —     | —     | —     |       |
+| 3                  | 1-12             | 13-16 | 17-18 | 19    | 20    | —     | —     | —     | —     |       |
+| 4                  | 1-5              | 6-10  | 11-16 | 17-18 | 19    | 20    | —     | —     | —     |       |
+| 5                  | 1-3              | 4-6   | 7-12  | 13-16 | 17-18 | 19    | 20    | —     | —     |       |
+| 6                  | 1-2              | 3-4   | 5-6   | 7-12  | 13-16 | 17-18 | 19    | 20    | —     |       |
+| 7                  | 1                | 2-3   | 4-5   | 6-10  | 11-14 | 15-16 | 17-18 | 19    | 20    | —     |
+| 8                  | 1                | 2     | 3-4   | 5-7   | 8-10  | 11-14 | 15-16 | 17-18 | 19    | 20    |
+| 9                  | 1                | 2     | 3     | 4-5   | 6-8   | 9-12  | 13-15 | 16-17 | 18-19 | 20    |
+| 10—11              | 1                | 2     | 3     | 4     | 5-6   | 7-9   | 10-12 | 13-16 | 17-19 | 20    |
+| 12—13              | 1                | 2     | 3     | 4     | 5     | 6-7   | 8-9   | 10-12 | 13-18 | 19-20 |
+| 14—15              | 1                | 2     | 3     | 4     | 5     | 6     | 7-8   | 9-11  | 12-17 | 18-20 |
+| 16+                | 1                | 2     | 3     | 4     | 5     | 6     | 7     | 8-10  | 11-16 | 17-20 |
 
 **Таблица монстров 1 (ПО 1/8—1/4)**
 
