--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -25,7 +25,7 @@ v.025-18112023 (обновление от 08.12.2023)
 
 ## ОСНОВНАЯ КНИГА
 
-1.  СОЗДАНИЕ ПЕРСОНАЖА
+1.  [СОЗДАНИЕ ПЕРСОНАЖА](https://cyborgsandmages.com/posts/cored20rpg/character-creation)
 
 2.  РАСЫ
 
@@ -53,7 +53,7 @@ v.025-18112023 (обновление от 08.12.2023)
 
 7.  [ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ](https://cyborgsandmages.com/posts/cored20rpg/abilities-checks-skills)
 
-8.  ПРИКЛЮЧЕНИЯ
+8.  [ПРИКЛЮЧЕНИЯ](https://cyborgsandmages.com/posts/cored20rpg/adventures)
 
 9.  [СРАЖЕНИЕ](https://cyborgsandmages.com/posts/cored20rpg/combat)
 
