--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -9,15 +9,7 @@ description: Созданная в сообществе Киборги и Чар
 
 v.025-18112023 (обновление от 08.12.2023)
 
-## ДОПОЛНИТЕЛЬНОЕ
 
-[Справочник цен](https://1drv.ms/w/s!Atcrhwwo1lBA34Zyc4aJTXfDKECa2A?e=TXivVo)
-
-[Действия](https://1drv.ms/w/s!Atcrhwwo1lBA2dM1YzRDMg03gFExVg?e=tekaaH)
-
-[Базовые боевые приемы](https://1drv.ms/w/s!Atcrhwwo1lBA2dMyCM_VzyPoHuZPGQ?e=PQCY66)
-
-[Состояния](https://1drv.ms/w/s!Atcrhwwo1lBA2dM4es-k2Vu9fId01A?e=gtN8VU)
 
 ---
 
@@ -27,15 +19,19 @@ v.025-18112023 (обновление от 08.12.2023)
 
 1.  [СОЗДАНИЕ ПЕРСОНАЖА](https://cyborgsandmages.com/posts/cored20rpg/character-creation)
 
-2.  РАСЫ
+2.  [РАСЫ](https://cyborgsandmages.com/posts/cored20rpg/races)
 
-3.  ПРОИСХОЖДЕНИЕ
+3.  [ПРОИСХОЖДЕНИЕ](https://cyborgsandmages.com/posts/cored20rpg/background)
 
-4.  КЛАССЫ
+4.  [КЛАССЫ](https://cyborgsandmages.com/posts/cored20rpg/classes)
 
-5.  НАСТРОЙКА ПЕРСОНАЖА
+5.  [НАСТРОЙКА ПЕРСОНАЖА](https://cyborgsandmages.com/posts/cored20rpg/character-customizing)
+   
+[Черты](https://cyborgsandmages.com/posts/cored20rpg/feats)
 
-6.  СНАРЯЖЕНИЕ
+[Мультиклассирование](https://cyborgsandmages.com/posts/cored20rpg/multiclassing)
+
+6.  [СНАРЯЖЕНИЕ](https://cyborgsandmages.com/posts/cored20rpg/equipment)
 
 [Доспехи и щиты](https://cyborgsandmages.com/posts/cored20rpg/armor)
 
@@ -49,6 +45,8 @@ v.025-18112023 (обновление от 08.12.2023)
 
 **Травяные смеси**
 
+[**Транспорт**](https://cyborgsandmages.com/posts/cored20rpg/equipment-transport)
+
 [**Справочные таблицы по снаряжению**](https://cyborgsandmages.com/posts/cored20rpg/equipment---tables)
 
 7.  [ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ](https://cyborgsandmages.com/posts/cored20rpg/abilities-checks-skills)
@@ -59,9 +57,9 @@ v.025-18112023 (обновление от 08.12.2023)
 
 [Отдых и лечение](https://cyborgsandmages.com/posts/cored20rpg/rests-and-healing)
 
-10. МАГИЯ
+10. [МАГИЯ](https://cyborgsandmages.com/posts/cored20rpg/magic)
 
-11. ОПИСАНИЕ ЗАКЛИНАНИЙ
+11. [ОПИСАНИЕ ЗАКЛИНАНИЙ](https://cyborgsandmages.com/posts/cored20rpg/spells)
 
 12. ПРИЛОЖЕНИЯ
 
@@ -77,23 +75,25 @@ v.025-18112023 (обновление от 08.12.2023)
 
 [Базовые приемы](https://cyborgsandmages.com/posts/cored20rpg/basicmaneuvers)
 
-Свойства доспехов
+[Свойства доспехов](https://cyborgsandmages.com/posts/cored20rpg/armorproperties)
 
 [Свойства оружия](https://cyborgsandmages.com/posts/cored20rpg/weaponproperties)
 
-Боевые приемы
+[Боевые приемы](https://cyborgsandmages.com/posts/cored20rpg/martial-maneuvers)
 
-Оружейные приемы
+[Оружейные приемы](https://cyborgsandmages.com/posts/cored20rpg/weapon-maneuvers)
 
-Метамагия
+[Боевые стили](https://cyborgsandmages.com/posts/cored20rpg/fighting styles)
 
-Воззвания
+[Метамагия](https://cyborgsandmages.com/posts/cored20rpg/metamagic)
 
-[Исследовательские приемы](https://cyborgsandmages.com/posts/cored20rpg/exploration-knacks#%D0%B2%D0%B0%D1%80%D0%B2%D0%B0%D1%80)
+[Воззвания](https://cyborgsandmages.com/posts/cored20rpg/invocations)
+
+[Исследовательские приемы](https://cyborgsandmages.com/posts/cored20rpg/exploration-knacks)
 
 ## БЕСТИАРИЙ
 
-1.  ВИДЫ СУЩЕСТВ
+1.  [ВИДЫ СУЩЕСТВ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-creatures-types)
 
 2.  ОСОБЕННОСТИ ВИДОВ СУЩЕСТВ
 
@@ -106,6 +106,17 @@ v.025-18112023 (обновление от 08.12.2023)
 2.  СОЗДАНИЕ СЕТТИНГА
 
 3.  ВОЖДЕНИЕ
+
+## ДОПОЛНИТЕЛЬНОЕ
+
+[Справочник цен](https://1drv.ms/w/s!Atcrhwwo1lBA34Zyc4aJTXfDKECa2A?e=TXivVo)
+
+[Действия](https://1drv.ms/w/s!Atcrhwwo1lBA2dM1YzRDMg03gFExVg?e=tekaaH)
+
+[Базовые боевые приемы](https://1drv.ms/w/s!Atcrhwwo1lBA2dMyCM_VzyPoHuZPGQ?e=PQCY66)
+
+[Состояния](https://1drv.ms/w/s!Atcrhwwo1lBA2dM4es-k2Vu9fId01A?e=gtN8VU)  
+
 
 ## СПИСОК ИЗМЕНЕНИЙ
 
