--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -15,6 +15,11 @@ v.025-18112023 (обновление от 08.12.2023)
 
 [ВСЕ СТАТЬИ](https://cyborgsandmages.com/posts/cored20rpg/1)
 
+## СТАРТОВЫЕ ПРАВИЛА
+
+[Стартовые правила](https://cyborgsandmages.com/posts/cored20rpg/starter-rules)
+
+
 ## ОСНОВНАЯ КНИГА
 
 1.  [СОЗДАНИЕ ПЕРСОНАЖА](https://cyborgsandmages.com/posts/cored20rpg/character-creation)
