--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -9,16 +9,17 @@ description: Созданная в сообществе Киборги и Чар
 
 v.025-18112023 (обновление от 08.12.2023)
 
-
-
 ---
 
 [ВСЕ СТАТЬИ](https://cyborgsandmages.com/posts/cored20rpg/1)
+
+---
 
 ## СТАРТОВЫЕ ПРАВИЛА
 
 [Стартовые правила](https://cyborgsandmages.com/posts/cored20rpg/starter-rules)
 
+---
 
 ## ОСНОВНАЯ КНИГА
 
@@ -56,7 +57,16 @@ v.025-18112023 (обновление от 08.12.2023)
 
 7.  [ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ](https://cyborgsandmages.com/posts/cored20rpg/abilities-checks-skills)
 
+
 8.  [ПРИКЛЮЧЕНИЯ](https://cyborgsandmages.com/posts/cored20rpg/adventures)
+
+[Деятельность простоя](https://cyborgsandmages.com/posts/cored20rpg/downtime)
+
+[Путешествие в дикой местности](https://cyborgsandmages.com/posts/cored20rpg/wilderness-travel)
+
+[Эффекты внешней среды и погоды](https://cyborgsandmages.com/posts/cored20rpg/weather-and-environment)
+
+[Исследование подземелья](https://cyborgsandmages.com/posts/cored20rpg/dungeon-exploring)
 
 9.  [СРАЖЕНИЕ](https://cyborgsandmages.com/posts/cored20rpg/combat)
 
@@ -66,7 +76,7 @@ v.025-18112023 (обновление от 08.12.2023)
 
 11. [ОПИСАНИЕ ЗАКЛИНАНИЙ](https://cyborgsandmages.com/posts/cored20rpg/spells)
 
-12. ПРИЛОЖЕНИЯ
+12. **ПРИЛОЖЕНИЯ**
 
 [Заклинания](https://cyborgsandmages.com/posts/cored20rpg/spells)
 
@@ -96,6 +106,8 @@ v.025-18112023 (обновление от 08.12.2023)
 
 [Исследовательские приемы](https://cyborgsandmages.com/posts/cored20rpg/exploration-knacks)
 
+---
+
 ## БЕСТИАРИЙ
 
 1.  [ВИДЫ СУЩЕСТВ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-creatures-types)
@@ -104,6 +116,8 @@ v.025-18112023 (обновление от 08.12.2023)
 
 3.  ШАБЛОНЫ
 
+---
+
 ## РУКОВОДСТВО МАСТЕРА
 
 1.  СОЗДАНИЕ ПРИКЛЮЧЕНИЙ
@@ -111,6 +125,8 @@ v.025-18112023 (обновление от 08.12.2023)
 2.  СОЗДАНИЕ СЕТТИНГА
 
 3.  ВОЖДЕНИЕ
+
+---
 
 ## ДОПОЛНИТЕЛЬНОЕ
 
@@ -122,6 +138,7 @@ v.025-18112023 (обновление от 08.12.2023)
 
 [Состояния](https://1drv.ms/w/s!Atcrhwwo1lBA2dM4es-k2Vu9fId01A?e=gtN8VU)  
 
+---
 
 ## СПИСОК ИЗМЕНЕНИЙ
 
